<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout

            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/enterItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/enter_item"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:hint="@string/hint_item"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_below="@id/enterItem"></EditText>

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item"

                android:ems="10"
                android:hint="@string/hint_item1"
                android:inputType="number|textPersonName"
                android:padding="20dp"></EditText>
            <EditText
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:hint="@string/hint_item2"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_below="@id/quantity"></EditText>

            <EditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/color"
                android:ems="10"
                android:hint="@string/hint_item3"
                android:inputType="number|textPersonName"
                android:padding="20dp"></EditText>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/size"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:text="@string/saveButton"
                android:textSize="20dp"
                android:textStyle="bold"></Button>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>