<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"

    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:padding="23dp"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/text_alert"
    android:text="@string/sure_text"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="6dp"
    android:layout_height="wrap_content"
    ></TextView>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/con_no_button"
        android:text="@string/no_text"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content">

    </Button>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/con_yes_button"
        android:text="@string/yes_text"
        android:layout_alignParentRight="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content">

    </Button>
</RelativeLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>